--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,3 +1,5 @@
 ul
   - @questions.each do |q|
-    li = q.title
+    li
+      == link_to q.title, question_path(q)
+==link_to 'Ask question', new_question_path
