--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,3 +1,19 @@
-ul
-  - @questions.each do |q|
-    li = q.title
+div
+  h4 Title
+  = @question.title
+div
+  h4 Body
+  = @question.body
+  table
+    - @question.answers.each do |answer|
+      tr
+        td =answer.text
+
+= render 'shared/errors', resource: @answer
+= form_with model: @answer, url: createanswer_question_path(@question, @answer), local: true do |f|
+  div class='form-group'
+    = f.label :text, 'Answer'
+    br
+    = f.text_area :text
+  div class='form-group'
+    = f.submit 'Submit answer'
