--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,34 @@ doctype html
 html
   head
     title Qna
-    == csrf_meta_tags
-    == csp_meta_tag
+    = csrf_meta_tags
+    = csp_meta_tag
 
-    == stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    == javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
 
-    == show_messages
-    == yield
+    nav class='navbar navbar-expand-md navbar-dark bg-dark'
+      = link_to 'Q&A', questions_path, class: 'navbar-brand'
+      button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'
+        span class='navbar-toggler-icon'
+      div class='collapse navbar-collapse' id='navbarSupportedContent'
+        ul class='nav navbar-nav navbar-right'
+          - if user_signed_in?
+            li class='nav-item dropdown'
+              a class='nav-link dropdown-toggle' href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'
+                = current_user.email
+              div class='dropdown-menu'
+                  = link_to 'Profile', edit_user_registration_path, class: 'dropdown-item'
+                  = link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'dropdown-item'
+          - else
+            ul class='nav navbar-nav'
+              li class='nav-item'
+                = link_to 'Sign in', user_session_path, class: 'nav-link'
+              li class='nav-item'
+                = link_to 'Sign up', new_user_registration_path, class: 'nav-link'
+
+    div class='container-fluid py-5'
+      = show_messages
+      = yield
