--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,5 @@
 ul
   - @questions.each do |q|
     li
-      == link_to q.title, question_path(q)
-==link_to 'Ask question', new_question_path
+      = link_to q.title, question_path(q)
+=link_to 'Ask question', new_question_path
