--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,22 +1,3 @@
-div
-  h4 Title
-  = @question.title
-div
-  h4 Body
-  = @question.body
-  table class='answers'
-    - @question.answers.each do |answer|
-      tr data-id=answer.id
-        td =answer.text
-        td
-          -if current_user&.author_of? answer
-            = link_to 'Delete', answer_path(id: answer), method: :delete, data: { confirm: 'Delete answer?' }
-= render 'shared/errors', resource: @answer
--if user_signed_in?
-  = form_with model: [@question, @answer], local: true do |f|
-    div class='form-group'
-      = f.label :text, 'Answer'
-      br
-      = f.text_area :text
-    div class='form-group'
-      = f.submit 'Submit answer'
+div class='question'
+  = render 'questions/data'
+= render 'questions/answers'
