--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,4 +1,4 @@
-tr class="answer #{@question.best_answer_id != answer.id ? '' : 'best '}" data-id=answer.id
+tr class="answer #{answer.best ? '' : 'best '}" data-id=answer.id
   - if answer == @edit_answer
     td colspan= '2'
       = render 'shared/errors', resource: @edit_answer
@@ -9,8 +9,8 @@ tr class="answer #{@question.best_answer_id != answer.id ? '' : 'best '}" data-i
     td
       div class='show' = answer.text
     td
-      - if current_user&.author_of?(@question) && @question.best_answer_id != answer.id
-        = link_to 'Best', question_best_path(@question, id: answer), remote: true, method: :post
+      - if !answer.best && current_user&.author_of?(@question)
+        = link_to 'Best', best_answer_path(answer), remote: true, method: :post
       - if current_user&.author_of? answer
         = link_to 'Edit', edit_answer_path(id: answer), remote: true
         = link_to 'Delete', answer_path(id: answer), remote: true, method: :delete, data: { confirm: 'Delete answer?' }
