--- a/app/views/answers/edit.js.erb
+++ b/app/views/answers/edit.js.erb
@@ -1,1 +1,1 @@
-$('.answers tr[data-id=<%= @edit_answer.id %>]').html('<%= j render @edit_answer %>');
+$('.answers tr[data-id=<%= @answer.id %>]').html('<%= j render 'form', answer: @answer, question: @answer.question %>');
