--- a/app/views/answers/_data.html.slim
+++ b/app/views/answers/_data.html.slim
@@ -1,11 +1,11 @@
 td
   div class='show' = answer.text
   - answer.files.each do |file|
-    div
+    div  class='file' data-id=file.id
       = link_to file.filename.to_s, url_for(file)
       - if current_user&.author_of? answer
         span
-        = link_to 'X', deletefile_answer_path(answer, file: file), method: :delete, remote: true
+        = link_to 'X', file_path(id: file), method: :delete, remote: true
 td
   - if !answer.best? && current_user&.author_of?(question)
     = link_to 'Best', best_answer_path(answer), remote: true, method: :post
