--- a/app/views/questions/_data.html.slim
+++ b/app/views/questions/_data.html.slim
@@ -3,10 +3,10 @@ h4 Title
 h4 Body
 = @question.body
 - @question.files.each do |file|
-  div
+  div class='file' data-id=file.id
     = link_to file.filename.to_s, url_for(file)
     - if current_user&.author_of? @question
       span
-      = link_to 'X', deletefile_question_path(@question, file: file), method: :delete, remote: true
+        = link_to 'X', file_path(id: file), method: :delete, remote: true
 - if current_user&.author_of? @question
   = link_to 'Edit', edit_question_path(@question), remote: true
