--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -11,6 +11,12 @@ div class='errors'
     br
     = f.text_area :body
   div class='form-group'
+    = f.label :links
+    br
+    = f.fields_for :links do |link|
+      = render 'links/link_fields', f: link
+    = link_to_add_association 'Add link', f, :links, partial: 'links/link_fields'
+  div class='form-group'
     = f.label :files
     br
     = f.file_field :files, multiple: true
