--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -4,7 +4,14 @@ td colspan= '2'
   = form_with model: [answer.persisted? ? nil : question, answer] do |f|
     = f.text_area :text
     div class='form-group'
+      = f.label :links
+      br
+      = f.fields_for :links do |link|
+        = render 'links/link_fields', f: link
+      = link_to_add_association 'Add link', f, :links, partial: 'links/link_fields'
+    div class='form-group'
       = f.label :files
       br
       = f.file_field :files, multiple: true
+
     = f.submit answer.persisted? ? 'Save' : 'Submit answer'
