--- a/app/views/questions/_data.html.slim
+++ b/app/views/questions/_data.html.slim
@@ -8,5 +8,8 @@ h4 Body
     - if current_user&.author_of? @question
       span
         = link_to 'X', file_path(id: file), method: :delete, remote: true
+- @question.links.each do |link|
+  div class='link' data-id=link.id
+    = create_link link.name, link.url
 - if current_user&.author_of? @question
   = link_to 'Edit', edit_question_path(@question), remote: true
