--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,13 +1,7 @@
-table
+table.questions
   tr
     th Title
     th colspan='2' Actions
-  - @questions.each do |q|
-    tr data-id=q.id
-      td = q.title
-      td = link_to 'Show', question_path(q)
-      td
-        - if current_user&.author_of? q
-          = link_to 'Delete', question_path(q), method: :delete, data: { confirm: 'Delete question?' }
+  = render @questions
 
 = link_to 'Ask question', new_question_path
