--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-div class='question' data-id=@question.id
+div class='question card' data-id=@question.id
   = render 'questions/data'
 = render 'questions/answers'
 script
