--- a/app/views/questions/_data.html.slim
+++ b/app/views/questions/_data.html.slim
@@ -1,20 +1,27 @@
-h4 Title
-= @question.title
-h4 Body
-= @question.body
-- @question.files.each do |file|
-  div class='file' data-id=file.id
-    = link_to file.filename.to_s, url_for(file)
-    - if current_user&.author_of? @question
-      span
-        = link_to 'X', file_path(id: file), method: :delete, remote: true
-- @question.links.each do |link|
-  div class='link' data-id=link.id
-    = create_link link.name, link.url
+.card-header
+  = @question.title
+.card-body
+  p.card-text
+    = @question.body
+- if @question.files.count > 0
+  .card-body.files
+    - @question.files.each do |file|
+      div class='file' data-id=file.id
+        = link_to file.filename.to_s, url_for(file)
+        - if current_user&.author_of? @question
+          span.ml-2
+            = link_to 'X', file_path(id: file), method: :delete, remote: true
+- if @question.links.count > 0
+  .card-body.links
+    - @question.links.each do |link|
+      div class='link' data-id=link.id
+        = create_link link.name, link.url
 - if @question.reward
-  div class='link'
+  .link.card-body
     = "Reward: #{@question.reward.name}"
-= render 'votes/vote', resource: @question
+.card-footer
+  = render 'votes/vote', resource: @question
 - if current_user&.author_of? @question
-  = link_to 'Edit', edit_question_path(@question), remote: true
+  .card-body
+    = link_to 'Edit', edit_question_path(@question), remote: true, class: 'btn btn-primary btn-sm'
 = render 'comments/list', resource: @question
