--- a/app/views/questions/_data.html.slim
+++ b/app/views/questions/_data.html.slim
@@ -8,7 +8,7 @@
     - @question.files.each do |file|
       div class='file' data-id=file.id
         = link_to file.filename.to_s, url_for(file)
-        - if current_user&.author_of? @question
+        - if can?(:destroy, file)
           span.ml-2
             = link_to 'X', file_path(id: file), method: :delete, remote: true
 - if @question.links.count > 0
@@ -21,7 +21,7 @@
     = "Reward: #{@question.reward.name}"
 .card-footer
   = render 'votes/vote', resource: @question
-- if current_user&.author_of? @question
+- if can? :edit, @question
   .card-body
     = link_to 'Edit', edit_question_path(@question), remote: true, class: 'btn btn-primary btn-sm'
 = render 'comments/list', resource: @question
