--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,5 +2,5 @@ tr data-id=question.id
   td = question.title
   td = link_to 'Show', question_path(question)
   td
-    - if current_user&.author_of? question
+    - if can? :destroy, question
       = link_to 'Delete', question_path(question), method: :delete, data: { confirm: 'Delete question?' }
