--- a/app/views/questions/_data.html.slim
+++ b/app/views/questions/_data.html.slim
@@ -21,6 +21,8 @@
     = "Reward: #{@question.reward.name}"
 .card-footer
   = render 'votes/vote', resource: @question
+  .subscribe
+    = render 'question_subscription/data', question: @question
 - if can? :edit, @question
   .card-body
     = link_to 'Edit', edit_question_path(@question), remote: true, class: 'btn btn-primary btn-sm'
